Always show scrollbar to avoid jerking the layout

--- a/src/index.css
+++ b/src/index.css
@@ -25,7 +25,8 @@ a:hover {
 }
 
 html {
-  background-color: #f0f0f0
+  background-color: #f0f0f0;
+  overflow-y: scroll;
 }
 
 body {
